# octopus2

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  layout.dini  layout.ini  layout_old.ini
.github/: copilot-instructions.md
src/exe/: CMakeLists.txt
src/exe/src/: main.cc  main2.cc  test.cc
src/octopus/: CMakeLists.txt
src/octopus/src/: flecs.h
src/octopus/src/cdt/include/: CDTUtils.h  CDTUtils.hpp  FunnelAlgorithm.h  ShortestPath.h  Triangulation.h  Triangulation.hpp  predicates.h
src/octopus/src/flecs/: CMakeLists.txt
src/octopus/src/flecs/private/: api_support.h
src/octopus/src/flecs/src/query/cache/: cache_iter.c
src/octopus/src/octopus/: main.cc  test.c  test.cc
src/octopus/src/octopus/commands/basic/: NoOpCommand.hh  README.md
src/octopus/src/octopus/commands/basic/ability/: CastCommand.hh
src/octopus/src/octopus/commands/basic/move/: AttackCommand.cc  AttackCommand.hh  AttackCommandSystem.cc  AttackCommandSystem.hh  DamageModifier.hh  MoveCommand.cc  MoveCommand.hh
src/octopus/src/octopus/commands/queue/: CommandQueue.cc  CommandQueue.hh  CommandQueueSystems.hh
src/octopus/src/octopus/commands/step/: StateChangeSteps.hh
src/octopus/src/octopus/components/: Attacker.hh  Movable.hh
src/octopus/src/octopus/components/basic/: Attack.cc  Attack.hh  HitPoint.cc  HitPoint.hh  Position.cc  Position.hh  Team.hh
src/octopus/src/octopus/components/generic/: Components.hh  Toolbox.hh
src/octopus/src/octopus/components/step/: BuffComponentStep.hh  ComponentStep.hh  ComponentStepContainer.cc  ComponentStepContainer.hh  Step.hh  StepContainer.cc  StepContainer.hh  StepReversal.hh
src/octopus/src/octopus/serialization/commands/: CommandSupport.cc  CommandSupport.hh
src/octopus/src/octopus/serialization/components/: AdvancedSupport.hh  BasicSupport.cc  BasicSupport.hh
src/octopus/src/octopus/serialization/containers/: ListSupport.hh  VectorSupport.hh
src/octopus/src/octopus/serialization/queue/: CommandQueueSupport.hh
src/octopus/src/octopus/serialization/utils/: UtilsSupport.cc  UtilsSupport.hh
src/octopus/src/octopus/serialization/variant/: VariantSupport.hh
src/octopus/src/octopus/systems/: GenericSystems.hh  Systems.cc  Systems.hh  Validator.hh
src/octopus/src/octopus/systems/hitpoint/: HitPointsSystems.cc  HitPointsSystems.hh  HitPointsValidator.cc
src/octopus/src/octopus/systems/input/: Input.cc  Input.defs.hh  Input.hh  InputCast.defs.hh  InputCast.hh  InputCommand.hh  InputCommandFunctor.hh  InputLayerContainer.hh  InputProduction.defs.hh  InputProduction.hh  InputStatus.hh
src/octopus/src/octopus/systems/phases/: Phases.hh
src/octopus/src/octopus/systems/position/: PositionSystems.cc  PositionSystems.hh
src/octopus/src/octopus/systems/production/: ProductionSystem.hh
src/octopus/src/octopus/systems/projectile/: ProjectileSystem.hh
src/octopus/src/octopus/systems/step/: StepSystems.cc  StepSystems.hh
src/octopus/src/octopus/systems/timestamp/: TimeStampSystems.hh
src/octopus/src/octopus/triangulation/: DelaunayTriangulation.cc  DelaunayTriangulation.hh  Triangulation.cc  Triangulation.hh
src/octopus/src/octopus/utils/: FixedPoint.hh  Grid.cc  Grid.hh  RandomGenerator.cc  RandomGenerator.hh  ThreadPool.cc  ThreadPool.hh  Vector.cc  Vector.hh
src/octopus/src/octopus/utils/aabb/: aabb.cc  aabb.hh  aabb_tree.hh
src/octopus/src/octopus/utils/fast_map/: fast_map.hh
src/octopus/src/octopus/utils/log/: Logger.hh
src/octopus/src/octopus/utils/triangulation/: Triangulation.cc  Triangulation.hh
src/octopus/src/octopus/utils/wave_function_collapse/: WaveFunctionCollapse.hh  WaveFunctionConstraints.hh
src/octopus/src/octopus/world/: ProductionTemplateLibrary.hh  StepContext.hh  WorldContext.hh
src/octopus/src/octopus/world/ability/: AbilityTemplate.hh  AbilityTemplateLibrary.hh
src/octopus/src/octopus/world/path/: PathFindingCache.cc  PathFindingCache.hh  direction.cc  direction.hh
src/octopus/src/octopus/world/player/: PlayerInfo.cc  PlayerInfo.hh  ResourceInfo.cc
src/octopus/src/octopus/world/position/: PositionContext.hh  closest_neighbours.cc  closest_neighbours.hh
src/octopus/src/octopus/world/production/: ProductionTemplate.hh  ProductionTemplateLibrary.hh
src/octopus/src/octopus/world/resources/: CostReduction.cc  CostReduction.hh  ResourceInfo.cc  ResourceInfo.hh  ResourceSpent.cc  ResourceSpent.hh  ResourceStock.cc  ResourceStock.hh
src/octopus/src/octopus/world/stats/: TimeStats.hh
src/octopus/src/octopus/world/step/: EntityCreationStep.cc  EntityCreationStep.hh  StepEntityManager.hh
src/octopus/test/: CMakeLists.txt
src/octopus/test/src/: command_queue.test.cc  command_queue_chaining.test.cc  comp_exclusion_bench.cc  noop_command.test.cc  sandbox.test.cc  ser_variant.test.cc  set_rally_point_command.test.cc  state.test.cc  state_exclusion_bench.cc  state_exclusive.test.cc  state_extension.test.cc  step_container_hitpoint.test.cc
src/octopus/test/src/commands/: custom_idle_loop.test.cc
src/octopus/test/src/env/: custom_components.hh  custom_production_templates.hh  setup.test.cc  stream_ent.hh
src/octopus/test/src/input/: input_ability.test.cc  input_cost_reduction.test.cc  input_move.test.cc  input_production.test.cc
src/octopus/test/src/save/: ability_save.cc  attack_move_save.test.cc  buff_component_stats_save.test.cc  move_save.test.cc  player_buff_double_save.test.cc  production_save.test.cc  upgrade_save.test.cc
src/octopus/test/src/serialization/: command_queue_serialization.test.cc  ser_basic_components.test.cc  ser_command_queue.test.cc  ser_fast_map.test.cc  ser_list.test.cc  ser_variant.test.cc  ser_vector.test.cc
src/octopus/test/src/step/command/: state_change_steps.test.cc
src/octopus/test/src/step/entity/: entity_creation_step.test.cc
src/octopus/test/src/triangulation/: path_finding_cache.test.cc  projection.test.cc  triangulation.test.cc
src/octopus/test/src/utils/recorder/: recorder.hh
src/octopus/test/src/utils/reverted/: reverted_comparison.cc  reverted_comparison.hh
src/octopus/test/src/utils/wave_function_collapse/: wfc.simple.test.cc
(+74 files in other folders)
